--- a/composer.json
+++ b/composer.json
@@ -3,7 +3,7 @@
 
     "license": "MIT",
 
-    "version": "0.0.1-beta",
+    "version": "0.0.1-dev",
 
     "require": {
         "symfony/http-foundation": "2.6.7",
@@ -14,5 +14,11 @@
         "behat/behat":     "3.0.14",
         "phpspec/phpspec": "2.1.0",
         "phpunit/phpunit": "~4.6.6"
+    },
+
+    "autoload": {
+        "psr-4": {
+            "SamBurns\\Psr7Symfony\\": "src/"
+        }
     }
 }
