--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,9 @@
     "require-dev": {
         "behat/behat":     "3.0.14",
         "phpspec/phpspec": "2.1.0",
-        "phpunit/phpunit": "~4.6.6"
+        "phpunit/phpunit": "~4.6.6",
+        "phpzone/phpzone": "0.1.0",
+        "phpzone/shell":   "0.1.2"
     },
 
     "autoload": {
