--- a/composer.json
+++ b/composer.json
@@ -11,10 +11,10 @@
     },
 
     "require-dev": {
-        "behat/behat":     "3.0.14",
-        "phpunit/phpunit": "~4.6.6",
-        "silex/silex":     "1.2.4",
-        "guzzle/guzzle":   "3.9.3"
+        "behat/behat":              "3.0.14",
+        "behat/mink-goutte-driver": "1.1.0",
+        "phpunit/phpunit":          "~4.6.6",
+        "silex/silex":              "1.2.4"
     },
 
     "autoload": {
