--- a/.travis.yml
+++ b/.travis.yml
@@ -10,7 +10,9 @@ install:
     - composer install
 
 script:
-    - ./vendor/bin/phpzone tests
+    - PROCESS_ID=`php -S localhost:8080 ./src-dev/public/index.php > /dev/null & echo $!`;
+    - ./vendor/bin/behat --config tests/behat/behat.yml --suite blackbox --append-snippets;
+    - kill -9 $PROCESS_ID;
 
 after_script:
     - php vendor/bin/coveralls -v
