--- a/.travis.yml
+++ b/.travis.yml
@@ -10,7 +10,7 @@ install:
     - composer install
 
 before_script:
-    - php -S localhost:8080 ./src-dev/public/index.php > /dev/null
+    - php -S localhost:8080 ./src-dev/public/index.php &
 
 script:
     - ./vendor/bin/behat --config tests/behat/behat.yml --suite blackbox --append-snippets;
