--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
         "behat/behat":              "3.0.14",
         "behat/mink-goutte-driver": "1.1.0",
         "phpunit/phpunit":          "~4.6.6",
+        "phpspec/phpspec":          "2.1.0",
         "silex/silex":              "1.2.4"
     },
 
