Adding white box testing suite in Behat

--- a/tests/behat/behat.yml
+++ b/tests/behat/behat.yml
@@ -6,3 +6,8 @@ default:
             paths:    [ %paths.base%/features/feature_files ]
             filters:  { tags: ~wip }
             contexts: [ BlackBoxContext ]
+
+        whitebox:
+            paths:    [ %paths.base%/features/feature_files ]
+            filters:  { tags: ~wip }
+            contexts: [ WhiteBoxContext ]
