--- a/.travis.yml
+++ b/.travis.yml
@@ -15,4 +15,5 @@ before_script:
 script:
     - ./vendor/bin/phpspec run --config tests/phpspec/phpspec.yml --no-interaction
     - ./vendor/bin/phpunit --config tests/phpunit/phpunit.xml
-    - ./vendor/bin/behat --config tests/behat/behat.yml --suite blackbox --append-snippets;
+    - ./vendor/bin/behat --config tests/behat/behat.yml --suite blackbox
+    - ./vendor/bin/behat --config tests/behat/behat.yml --suite whitebox
