--- a/.travis.yml
+++ b/.travis.yml
@@ -13,7 +13,10 @@ before_script:
     - php -S localhost:8080 ./src-dev/public/index.php &
 
 script:
-    - ./vendor/bin/phpspec run --config tests/phpspec/phpspec.yml --no-interaction
-    - ./vendor/bin/phpunit --config tests/phpunit/phpunit.xml
+    - ./vendor/bin/phpspec run --config tests/phpspec/phpspec-travis.yml --no-interaction
+    - ./vendor/bin/phpunit --config tests/phpunit/phpunit-travis.xml
     - ./vendor/bin/behat --config tests/behat/behat.yml --suite blackbox
     - ./vendor/bin/behat --config tests/behat/behat.yml --suite whitebox
+
+after_script:
+    - php vendor/bin/coveralls -v
