--- a/composer.json
+++ b/composer.json
@@ -6,16 +6,19 @@
     "version": "0.0.1-dev",
 
     "require": {
+        "php":                     ">=5.3.10",
         "symfony/http-foundation": "2.6.7",
         "psr/http-message":        "0.11.0"
     },
 
     "require-dev": {
-        "behat/behat":              "3.0.14",
-        "behat/mink-goutte-driver": "1.1.0",
-        "phpunit/phpunit":          "~4.6.6",
-        "phpspec/phpspec":          "2.1.0",
-        "silex/silex":              "1.2.4"
+        "php":                               ">=5.4.0",
+        "behat/behat":                       "3.0.14",
+        "behat/mink-goutte-driver":          "1.1.0",
+        "phpunit/phpunit":                   "~4.6.6",
+        "phpspec/phpspec":                   "2.1.0",
+        "silex/silex":                       "1.2.4",
+        "henrikbjorn/phpspec-code-coverage": "~1.0"
     },
 
     "autoload": {
