--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,8 @@
         "phpunit/phpunit":                   "~4.6.6",
         "phpspec/phpspec":                   "2.1.0",
         "silex/silex":                       "1.2.4",
-        "henrikbjorn/phpspec-code-coverage": "~1.0"
+        "henrikbjorn/phpspec-code-coverage": "~1.0",
+        "satooshi/php-coveralls":            "dev-master"
     },
 
     "autoload": {
