--- a/.travis.yml
+++ b/.travis.yml
@@ -15,8 +15,8 @@ before_script:
 script:
     - ./vendor/bin/phpspec run --config tests/phpspec/phpspec-travis.yml --no-interaction
     - ./vendor/bin/phpunit --config tests/phpunit/phpunit-travis.xml
-    - ./vendor/bin/behat --config tests/behat/behat.yml --suite blackbox
-    - ./vendor/bin/behat --config tests/behat/behat.yml --suite whitebox
+    - ./vendor/bin/behat --config tests/behat/behat.yml --suite request
+    - ./vendor/bin/behat --config tests/behat/behat.yml --suite webserver
 
 after_script:
     - php vendor/bin/coveralls -v
