--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,8 @@
     "require": {
         "php":                     ">=5.3.10",
         "symfony/http-foundation": "2.6.7",
-        "psr/http-message":        "0.11.0"
+        "psr/http-message":        "0.11.0",
+        "jwage/purl": "0.0.6"
     },
 
     "require-dev": {
